@@ -6,6 +6,7 @@ import com.pokemonreview.api.exceptions.ResourceNotFoundException;
 import com.pokemonreview.api.models.Pokemon;
 import com.pokemonreview.api.repository.PokemonRepository;
 import com.pokemonreview.api.service.PokemonService;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -18,13 +19,14 @@ import java.util.stream.Collectors;
 
 @Service
 @Transactional
+@RequiredArgsConstructor
 public class PokemonServiceImpl implements PokemonService {
-    private PokemonRepository pokemonRepository;
+    private final PokemonRepository pokemonRepository;
 
     //Constructor Injection
-    public PokemonServiceImpl(PokemonRepository pokemonRepository) {
-        this.pokemonRepository = pokemonRepository;
-    }
+//    public PokemonServiceImpl(PokemonRepository pokemonRepository) {
+//        this.pokemonRepository = pokemonRepository;
+//    }
 
     @Override
     public PokemonDto createPokemon(PokemonDto pokemonDto) {
@@ -46,7 +48,8 @@ public class PokemonServiceImpl implements PokemonService {
                 .stream() //Stream<Pokemon>
                 .map(p -> mapToDto(p)) //Stream<PokemonDto>
                 //.map(this::mapToDto)
-                .collect(Collectors.toList()); //List<PokemonDto>
+//                .collect(Collectors.toList()); //List<PokemonDto>
+                .toList();
 
         PageResponse<PokemonDto> pokemonResponse = new PageResponse<>();
         pokemonResponse.setContent(content);
@@ -55,7 +58,7 @@ public class PokemonServiceImpl implements PokemonService {
         pokemonResponse.setTotalElements(pokemonPage.getTotalElements());
         pokemonResponse.setTotalPages(pokemonPage.getTotalPages());
         pokemonResponse.setLast(pokemonPage.isLast());
-
+        pokemonResponse.setFirst(pokemonPage.isFirst());
         return pokemonResponse;
     }
 
@@ -67,7 +70,7 @@ public class PokemonServiceImpl implements PokemonService {
 
     private Pokemon getExistPokemon(int id) {
         Pokemon pokemon = pokemonRepository
-                .findById(id)
+                .findById(id)   // Optional<Pokemon>
                 .orElseThrow(() ->
                         new ResourceNotFoundException("Pokemon could not be found"));
         return pokemon;
